// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:PopOver with offset: default 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover no offset 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control in has-popover"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="cxd-PopOver cxd-PopOverAble-popover"
          role="popover"
          style="display: block; left: 0px; top: 0px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="cxd-Panel cxd-Panel--default"
            data-role="container"
          >
            <div
              class="cxd-Panel-body"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover with offset 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control in has-popover"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="cxd-PopOver cxd-PopOverAble-popover"
          role="popover"
          style="display: block; left: 101px; top: 102px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="cxd-Panel cxd-Panel--default"
            data-role="container"
          >
            <div
              class="cxd-Panel-body"
            >
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
